chart/tests/vpol/disallow-privileged-containers-cel/chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01-new
spec:
  initContainers:
  - name: busybox01-init
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: true
  containers:
  - name: busybox01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: false
  - name: busybox02
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02-new
spec:
  containers:
  - name: busybox01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03-new
spec:
  containers:
  - name: busybox01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: true
  - name: busybox02
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: false
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04-new
spec:
  containers:
  - name: busybox01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: false
  - name: busybox02
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
  - name: container02
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  initContainers:
  - name: initcontainer01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: true
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  initContainers:
  - name: initcontainer01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
  - name: initcontainer02
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: true
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  initContainers:
  - name: initcontainer01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
  - name: initcontainer02
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: true
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: true
---
