chart/tests/vpol/disallow-privileged-containers-cel/chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01-new
spec:
  initContainers:
  - name: busybox01-init
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: false
  containers:
  - name: busybox01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: false
  - name: busybox02
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02-new
spec:
  containers:
  - name: busybox01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: false
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03-new
spec:
  containers:
  - name: busybox01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: false
  - name: busybox02
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: false
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04-new
spec:
  containers:
  - name: busybox01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: false
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
  - name: container02
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: false
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  initContainers:
  - name: initcontainer01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  initContainers:
  - name: initcontainer01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: false
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  initContainers:
  - name: initcontainer01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
  - name: initcontainer02
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: false
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    securityContext:
      privileged: false
---
