chart/tests/vpol/disallow-privileged-containers-cel/chainsaw-test/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: busybox01-init
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
          securityContext:
            privileged: false
      containers:
        - name: busybox01
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
          securityContext:
            privileged: true
        - name: busybox02
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
          securityContext:
            privileged: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
        - name: container02
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
          securityContext:
            privileged: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
          securityContext:
            privileged: true
      containers:
        - name: container01
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
        - name: initcontainer02
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
          securityContext:
            privileged: true
      containers:
        - name: container01
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
        - name: initcontainer02
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
          securityContext:
            privileged: true
      containers:
        - name: container01
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
          securityContext:
            privileged: true
